terraform/tmp/default/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-default
  name: nginx-default
  namespace: default
spec:
  containers:
  - image: nginx
    name: nginx-default
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx-default
  name: nginx-default
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30008
  selector:
    run: nginx-default
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/issuer: pebble
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - osiks.local
    secretName: osiks-tls
  rules:
    - host: osiks.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx-default
                port:
                  number: 80
