terraform/tmp/default/nginx_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/issuer: pebble
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - osiks.local
    secretName: osiks-tls
  rules:
    - host: osiks.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx-default
                port:
                  number: 80
